2002-06-03  Larry Ewing  <lewing@ximian.com>

	* htmltablecell.c (draw_background_helper): only draw the
	background if we are not a plain painter.  This needs to be
	virtualized better into the painter class, but that can wait for now.

	* htmlclueflow.c (save_plain):  make sure we don't try to rewrap
	tables once they have already been formatted.  It doesn't help
	anyone.

2002-06-02  Larry Ewing  <lewing@ximian.com>

	* gtkhtml-private.h: add as_citation member and change
	last_selection_type name;

	* gtkhtml.h: add as_cite boolean to request_paste prototype.

	* gtkhtml.c (selection_get): check for a selection object before
	pasting.
	(selection_get): remove a accidental paste.

	* ChangeLog: Merge multicite branch.

2002-05-22  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c: merge undo changes. Cleanup skip_host.

	* htmlengine-edit-cut-and-paste.c: merge undo changes and compare
	levels in check_flows () to make sure when push when we need to.

	* htmlengine-edit-clueflowstyle.c: merge undo changes from radek's
	paragraph fix.

	* htmlengine-edit-clueflowstyle.h: merge more undo changes.

2002-05-22  Larry Ewing  <lewing@ximian.com>

	* htmlclueflow.c (save_plain): make len a gint, the unsignedness
	was causing a nasty loop in the padding calculation.
	(html_clueflow_set_item_type): preserve the toplevel type if it is
	a blockquote.

2002-05-21  Larry Ewing  <lewing@ximian.com>

	* htmlclueflow.c (draw_item): draw the item number offset by the
	indent amount not the first->x offset this fixes the difference
	between out rendering and the rendering of mozilla of aligned
	paragraphs.
	(save_plain): align the paragraph in plain mode.  Yes NotZed this
	is fun.

2002-05-20  Larry Ewing  <lewing@ximian.com>

	* htmlclueflow.c (write_flow_tag): Fix handling for empty
	paragraphs that where the type changes but there is no end tag.
	(get_level_indent): make the indent match the
	plain indent so that the wrap length is exact.