@@ -35,6 +35,9 @@ struct _HTMLIFrame {
 	GtkWidget *scroll;
 	GtkWidget *html;
 	HTMLPainter *gdk_painter;
+	HTMLPainter *old_painter;
+	HTMLPainter *parent_painter;
+	HTMLFontManager *old_font_manager;
 	gint width;
 	gint height;
 	gboolean frameborder;
